--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-portfolio",
+  "name": "personal-portfolio",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://www.ottobisno.com/",
